# My-project-template

./:  cookiecutter.json  .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: pyproject.toml
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  LICENSE  pyproject.toml
{{cookiecutter.project_name}}/scripts/: mkinit.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __main__.py
